# musicserver

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONVENTIONS.md  INSTALL.md  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  main_android.go  musicserver_android.go
android/: .classpath.m4  .gitignore  .project  AndroidManifest.xml  AndroidManifest.xml.in  CMakeLists.txt  Makefile  assets  common.cmake  common.mk  run_d8.cmake
android/java/dalvik/annotation/optimization/: CriticalNative.java  FastNative.java
android/java/org/msxrv/musicserver/: BridgeUtils.java  MainActivity.java  MusicServerApp.java  NativeAudioBridge.java  NativeBridge.java  ScanNotificationPoller.java  ScanTracksPoller.java  ScanTracksService.java  SettingsBridge.java  TrackUtils.java  WebViewService.java
android/res/layout/: activity_main.xml
branding/: README.md
cmake/: install_taglib.cmake  install_taglib.cmake.in
extras/: album_prefixes.py  duplicate_titles.py
frontend/: .prettierrc  CMakeLists.txt  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite-android.config.ts  vite-common.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  AppState.tsx  AudioState.tsx  BookmarksTab.css  BookmarksTab.tsx  ConfirmBox.css  ConfirmBox.tsx  ContextMenu.css  ContextMenu.tsx  FileBrowserTab.css  FileBrowserTab.tsx  MainTracksTab.css  MainTracksTab.tsx  MusicPlayer.css  MusicPlayer.tsx  ProgressTable.tsx  SearchBar.css  SearchBar.tsx  SearchSuggestions.css  SearchSuggestions.tsx  Select.tsx  SettingsTab.css  SettingsTab.tsx  Track.css  Track.tsx  TrackData.tsx  TrackList.css  TrackList.tsx  TrackQueue.tsx  apiAudio.tsx  apiServer.tsx  apiaudio.tsx  apiserver.tsx  common.css  main.tsx  responsive.tsx  settings.tsx  toast.tsx  useWindowWidth.tsx  (+1 more)
frontend/src/audio/: AudioInterface.tsx  AudioState.tsx  BrowserAudio.tsx  NativeAudio.tsx  apiAudio.tsx
internal/api/: api.go  coverfallback.go  external.go  generic.go  handler.go  http.go  interface.go  interface_album.go  interface_audionorm.go  interface_db.go  interface_db_test.go  interface_external.go  interface_file.go  interface_general.go  interface_progress.go  interface_scantracks.go  interface_scantracks_unsupported.go  interface_test.go  interface_track.go  interface_trackcache.go  interface_trackcache_test.go  ipc_other.go  ipc_unix.go  ipc_unix_test.go  scantracks.go  scantracks_unsupported.go  specs.md  unix.go
internal/audio/: norm_ebur128.go  norm_fallback.go  reader.go  reader_fallback.go  reader_sndfile.go
internal/audionorm/: ebur128.go  fallback.go
internal/cli/: cli.go  cmd.go  cmd_do.go  cmd_serve.go
internal/ebur128/: bindings.go  specs.md
internal/lib/ebur128/: bindings.go
internal/lib/sndfile/: bindings.go
internal/lib/taglib/: taglib.go
internal/libsndfile/: bindings.go
internal/migration/: migration.go  migration_test.go  specs.md  v0.go  v1.go  v2.go  v3.go
internal/progress/: progress.go  progress_test.go
internal/schema/: config.go  config_args.go  config_args_test.go  data.go  extensions.go
internal/searchparser/: parser.go  parser_test.go  specs.md
internal/taglib/: CMakeLists.txt  Makefile  bindings.cpp  bindings.h  taglib.cpp  taglib.go
jni/: libebur128.c  libmusicserver.c  libmusicserver_taglib.c
mk/: android.mk
